--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -95,7 +95,7 @@ block content
                     br
                     br
                     button.delete-account.btn.btn-danger Delete Account
-                    button.delete-account.btn.btn-danger Delete Account And Ban Ip
+                    //button.delete-account.btn.btn-danger Delete Account And Ban Ip
                     if user.role == 'admin'
                         button.delete-ips.btn.btn-danger Delete All Accounts / Ips
 
@@ -104,7 +104,7 @@ block content
                     br
                     h3 ACCOUNT DELETED
                     button.undelete-account.btn.btn-warning Undelete Account
-                    button.undelete-account.btn.btn-warning Undelete Account And Unban Ip
+                    //button.undelete-account.btn.btn-warning Undelete Account And Unban Ip
                     if user.role == 'admin'
                         button.delete-ips.btn.btn-warning Undelete All Accounts / Unban All Ips
 
