--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -13,7 +13,7 @@ block content
     .form-group
       label.col-sm-3.control-label(for='channelUrl') Channel Username
       .col-sm-7
-        input.form-control.username(type='text', name='channelUrl', id='channelUrl', autofocus, required)
+        input.form-control.username(type='text', name='channelUrl', id='channelUrl', autofocus, required placeholder='Please enter your channel username')
     .form-group
       label.col-sm-3.control-label(for='password') Password
       .col-sm-7
